# pixel-agent-web

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.dev.conf  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  security.py
backend/app/agent/: callbacks.py  graph.py  manager.py  providers.py  sandbox.py  tools.py
backend/app/api/: agents.py  health.py  layouts.py  websocket.py
backend/app/models/: __init__.py  agent.py  layout.py  user.py
client/: nginx.conf  package-lock.json  package.json  sprite-test.html  vite.config.ts
client/src/: App.tsx  index.css  vscodeApi.ts
client/src/api/: types.ts  websocket.ts
client/src/components/: AgentChatPanel.tsx  AgentCreateModal.tsx  AgentLabels.tsx  BottomToolbar.tsx  DebugView.tsx  SettingsModal.tsx
client/src/hooks/: useAssetLoader.ts  useEditorActions.ts  useExtensionMessages.ts  useWebSocket.ts
pixel-agents/: .prettierignore  CHANGELOG.md  eslint.config.mjs  package-lock.json  package.json
pixel-agents/src/: PixelAgentsViewProvider.ts  agentManager.ts  assetLoader.ts  fileWatcher.ts  layoutPersistence.ts  timerManager.ts  transcriptParser.ts  types.ts
pixel-agents/webview-ui/: eslint.config.js  package.json  vite.config.ts
scripts/: 5-export-assets.ts
server/: .env.example  agent.ts  assetLoader.ts  constants.ts  index.ts  package-lock.json  package.json  tsconfig.json
src/: PixelAgentsViewProvider.ts  agentManager.ts  fileWatcher.ts  types.ts
(+19 files in other folders)
