[project]
name = "pixel-agents-backend"
version = "0.1.0"
description = "LangGraph-powered agent backend for Pixel Agents Web"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pydantic-settings>=2.13.0",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=4.0.0",
    "httpx>=0.28.0",
    "redis>=7.2.0",
    "cryptography>=46.0.0",
    "python-dotenv>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
